fixing counter style-stretch

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ h2 {
 .counter {
   position: absolute;
   background-color: red;
+  right: 2px;
   border-radius: 50%;
   color: white;
   padding: 5px;
@@ -345,7 +346,7 @@ a:hover {
 .productwidth {
   width: 100%;
   text-align: center;
-  padding: 3rem 2rem;
+  /*padding: 3rem 2rem;*/
   line-height: 1.8;
 }
 
@@ -506,9 +507,7 @@ footer {
   display: none
 }
 
-.is-selected {
-  padding-left: 0;
-}
+
 
 
 /*Tablet View**********************************/
